Incremental improvements to the song list; add more songs

--- a/_data/songs/artists/secret-service.yml
+++ b/_data/songs/artists/secret-service.yml
@@ -7,6 +7,8 @@ songs:
     deezer: 1170312
     shazam: 20087457
     youtube: [kEmpagABHmg, ldoHhZutfB4]
+    tags: [3, vintage]
+
 
   - title: Oh Susie
     year: 1979
@@ -14,4 +16,4 @@ songs:
     deezer: 4189690
     shazam: 20060153
     youtube: [iK4m-S-E6fE, Nd2AEr4Zf3k]
-    
+    tags: [2, nostalgia]
