--- a/_data/songs/artists/secret-service.yml
+++ b/_data/songs/artists/secret-service.yml
@@ -2,8 +2,8 @@ artist: Secret Service
 wikipedia: https://en.wikipedia.org/wiki/Secret_Service_(band)
 songs:
   - title: Flash In The Night
+    lang: en
     year: 1982
-    amazon: B01AWJUZOY
     deezer: 1170312
     shazam: 20087457
     youtube: [kEmpagABHmg, ldoHhZutfB4]
@@ -11,8 +11,8 @@ songs:
 
 
   - title: Oh Susie
+    lang: en
     year: 1979
-    amazon: B01C8Z50B8
     deezer: 4189690
     shazam: 20060153
     youtube: [iK4m-S-E6fE, Nd2AEr4Zf3k]
