--- a/_data/songs/artists/mono.yml
+++ b/_data/songs/artists/mono.yml
@@ -2,6 +2,7 @@ artist: Mono
 wikipedia: https://en.wikipedia.org/wiki/Mono_(UK_band)
 songs:
   - title: Life In Mono
+    lang: en
     year: 1997
     deezer: 6586813
     shazam: 292067
