--- a/_data/songs/artists/roy-orbison.yml
+++ b/_data/songs/artists/roy-orbison.yml
@@ -2,6 +2,7 @@ artist: Roy Orbison
 wikipedia: https://en.wikipedia.org/wiki/Roy_Orbison
 songs:
   - title: I Drove All Night
+    lang: en
     year: 1992
     deezer: 134945648
     shazam: 281511
