--- a/_data/songs/artists/magazine-60.yml
+++ b/_data/songs/artists/magazine-60.yml
@@ -4,7 +4,9 @@ songs:
   - title: Que No Sa (Dolores Mi Amor)
     lang: [es, en]
     year: 1986
-    deezer: 60784229
-    shazam: 54003311
-    youtube: [z7xdJGAxw5M, FOazePZbncM]
-    tags: [2, fast, fly]
+    fav: 2
+    tags: [fast, fly]
+    links:
+      deezer: 60784229
+      shazam: 54003311
+      youtube: [z7xdJGAxw5M, FOazePZbncM]
