--- a/_data/songs/artists/secret-service.yml
+++ b/_data/songs/artists/secret-service.yml
@@ -4,16 +4,20 @@ songs:
   - title: Flash In The Night
     lang: en
     year: 1982
-    deezer: 1170312
-    shazam: 20087457
-    youtube: [kEmpagABHmg, ldoHhZutfB4]
-    tags: [3, vintage]
+    fav: 3
+    tags: [vintage]
+    links:
+      deezer: 1170312
+      shazam: 20087457
+      youtube: [kEmpagABHmg, ldoHhZutfB4]
 
 
   - title: Oh Susie
     lang: en
     year: 1979
-    deezer: 4189690
-    shazam: 20060153
-    youtube: [iK4m-S-E6fE, Nd2AEr4Zf3k]
-    tags: [2, nostalgia]
+    fav: 2
+    tags: [nostalgia]
+    links:
+      deezer: 4189690
+      shazam: 20060153
+      youtube: [iK4m-S-E6fE, Nd2AEr4Zf3k]
