--- a/_data/songs/artists/claudia-jung.yml
+++ b/_data/songs/artists/claudia-jung.yml
@@ -4,7 +4,9 @@ songs:
   - title: Amore Amore
     lang: de
     year: 1987
-    deezer: 16712932
-    shazam: 20085775
-    youtube: [Cv6WHF9DPhk, _Hb5pV4FXLM]
-    tags: [3, schlager]
+    fav: 3
+    tags: [schlager]
+    links:
+      deezer: 16712932
+      shazam: 20085775
+      youtube: [Cv6WHF9DPhk, _Hb5pV4FXLM]
