--- a/_data/songs/artists/mono.yml
+++ b/_data/songs/artists/mono.yml
@@ -4,10 +4,12 @@ songs:
   - title: Life In Mono
     lang: en
     year: 1997
-    deezer: 6586813
-    shazam: 292067
-    wikipedia: https://en.wikipedia.org/wiki/Life_in_Mono
-    youtube: [9dGC-b5kvXM, HR3iWRq8ymI]
-    tags: [2, nostalgia, the one, sadness]
+    fav: 2
+    tags: [nostalgia, the one, sadness]
+    links:
+      deezer: 6586813
+      shazam: 292067
+      wikipedia: https://en.wikipedia.org/wiki/Life_in_Mono
+      youtube: [9dGC-b5kvXM, HR3iWRq8ymI]
 
     
