--- a/_data/songs/artists/roy-orbison.yml
+++ b/_data/songs/artists/roy-orbison.yml
@@ -4,9 +4,11 @@ songs:
   - title: I Drove All Night
     lang: en
     year: 1992
-    deezer: 134945648
-    shazam: 281511
-    wikipedia: https://en.wikipedia.org/wiki/I_Drove_All_Night
-    youtube: [m5N9IHqqGcA, i8ZVFngqvzA]
-    tags: [3, love]
+    fav: 3
+    tags: [love]
+    links:
+      deezer: 134945648
+      shazam: 281511
+      wikipedia: https://en.wikipedia.org/wiki/I_Drove_All_Night
+      youtube: [m5N9IHqqGcA, i8ZVFngqvzA]
   
