Incremental improvements to the song list display and site layout

--- a/_data/songs/artists/amy-winehouse.yml
+++ b/_data/songs/artists/amy-winehouse.yml
@@ -10,4 +10,4 @@ songs:
       deezer: 2176856
       shazam: 44595270
       wikipedia: https://en.wikipedia.org/wiki/Back_to_Black_(song)
-      youtube: [TJAfLE39ZZ8, 4IOXgamaOLI, 0_25S5BgTlg]
+      youtube: [TJAfLE39ZZ8, 4IOXgamaOLI]
