--- a/_data/songs/artists/new-kids-on-the-block.yml
+++ b/_data/songs/artists/new-kids-on-the-block.yml
@@ -10,4 +10,4 @@ songs:
       deezer: 1065851
       shazam: 45736023
       wikipedia: https://en.wikipedia.org/wiki/Tonight_(New_Kids_on_the_Block_song)
-      youtube: [JTo3N73hpPg, 9Wz4Ltg1gxo, _8N_089Br1Y]
+      youtube: [JTo3N73hpPg, 9Wz4Ltg1gxo]
