Improve song list layout; cleanup CSS; improve YML data; add new songs

--- a/_data/songs/artists/amy-winehouse.yml
+++ b/_data/songs/artists/amy-winehouse.yml
@@ -2,12 +2,11 @@ artist: Amy Winehouse
 wikipedia: https://en.wikipedia.org/wiki/Amy_Winehouse
 songs:
   - title: Back To Black
-    lang: en
+    lang: [en]
     year: 2007
     fav: 2
     tags: [sadness]
     links:
       deezer: 2176856
-      shazam: 44595270
       wikipedia: https://en.wikipedia.org/wiki/Back_to_Black_(song)
       youtube: [TJAfLE39ZZ8, 4IOXgamaOLI]
