--- a/_data/songs/artists/secret-service.yml
+++ b/_data/songs/artists/secret-service.yml
@@ -2,22 +2,20 @@ artist: Secret Service
 wikipedia: https://en.wikipedia.org/wiki/Secret_Service_(band)
 songs:
   - title: Flash In The Night
-    lang: en
+    lang: [en]
     year: 1982
-    fav: 3
+    fav: 4
     tags: [vintage]
     links:
       deezer: 1170312
-      shazam: 20087457
       youtube: [kEmpagABHmg, ldoHhZutfB4]
 
 
   - title: Oh Susie
-    lang: en
+    lang: [en]
     year: 1979
     fav: 2
     tags: [nostalgia]
     links:
       deezer: 4189690
-      shazam: 20060153
       youtube: [iK4m-S-E6fE, Nd2AEr4Zf3k]
