--- a/_data/songs/artists/mono.yml
+++ b/_data/songs/artists/mono.yml
@@ -2,13 +2,12 @@ artist: Mono
 wikipedia: https://en.wikipedia.org/wiki/Mono_(UK_band)
 songs:
   - title: Life In Mono
-    lang: en
+    lang: [en]
     year: 1997
     fav: 2
     tags: [nostalgia, the one, sadness]
     links:
       deezer: 6586813
-      shazam: 292067
       wikipedia: https://en.wikipedia.org/wiki/Life_in_Mono
       youtube: [9dGC-b5kvXM, HR3iWRq8ymI]
 
