--- a/_data/songs/artists/claudia-jung.yml
+++ b/_data/songs/artists/claudia-jung.yml
@@ -9,3 +9,12 @@ songs:
     links:
       deezer: 16712932
       youtube: [Cv6WHF9DPhk, _Hb5pV4FXLM]
+
+  - title: Domani l'amore vincera 
+    lang: [de, it]
+    year: 1996
+    fav: 3
+    tags: []
+    links:
+      deezer: 10028541
+      youtube: [X7CUHS0cA0o, arxfkTv7bAQ]
